<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    tools:context=".CreateActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView4"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/ic_baseline_brightness_5_24"
                app:civ_border_color="@color/purple_700"
                app:civ_border_width="5dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dateOfBirthDateText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="55dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/dateOfBirth"
                android:singleLine="true"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColorHint="@color/white"
                android:textSize="17sp"
                app:iconPadding="10dp" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/surnameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/surname"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/e_mail"
                android:textAlignment="center"
                android:textColorHint="@color/white" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <EditText
                android:id="@+id/numberEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:maxLength="10"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="@color/white" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/man"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/woman"
                    android:textColor="@color/black" />
            </RadioGroup>

            <TextView
                android:id="@+id/textViewKvkkClickText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_create_button"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/linearLayoutBottomSheet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewKvkkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kvkk_text_accept"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewKvkkTextAccept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/you_accept"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/fcreateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_message_background"
                android:backgroundTint="@color/purple_700"
                android:paddingHorizontal="50dp"
                android:text="@string/register"
                app:layout_constraintBottom_toTopOf="@+id/loginTextView" />

            <LinearLayout
                android:id="@+id/linearLayoutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_account"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/loginTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:textColor="@color/purple_700"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
