<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_screen"
    android:orientation="vertical"
    tools:context=".AnaEkranActivity">

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:paddingHorizontal="25dp"
        android:text="@string/personal_info"
        android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewCikti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingHorizontal="25dp"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
        android:textSize="20sp"
        android:textStyle="normal" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView2"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_baseline_brightness_5_24"
        app:civ_border_color="@color/purple_700"
        app:civ_border_width="1dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCikisYap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/edittext_message_background"
        android:backgroundTint="@color/purple_700"
        android:paddingHorizontal="25dp"
        android:text="@string/exit" />
</LinearLayout>